<resources>
    <string name="app_name">Material Design Dashboard</string>
    <string name="restaurant">Restaurant</string>
    <string name="good_food_good_life">Good food, good life</string>
    <string name="french_fries">French fries</string>
    <string name="todo">TODO</string>
    <string name="todox">TODO</string>
    <string name="todoy">TODO</string>
    <string name="noodles">Noodles</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="hamburger">Hamburger</string>
    <string name="pizza">Pizza</string>
    <string name="sandwich">Sandwich</string>

    <string name="www_restaurant_com">www.restaurant.com</string>
    <string name="image">TODO</string>
    <string name="home">Home</string>
    <string name="meal">Order</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us" >Rate Us</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>