<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/nav_meal"
        android:title="@string/meal"
        android:icon="@drawable/ic_baseline_fastfood"/>


</group>


        <item android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">
                <item android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/ic_baseline_login"/>

                <item android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_baseline_person"/>

                <item android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_baseline_logout"/>


                </group>
            </menu>
        </item>


    <item android:title="@string/communicate">

        <menu >

            <item android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share"/>


            <item android:id="@+id/nav_rate"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_baseline_rate_review"/>
        </menu>




    </item>
</menu>