<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/back"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/restaurant_100px"
        android:contentDescription="@string/image" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/restaurant"
       android:textSize="24sp"
       android:fontFamily="@font/baloo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www_restaurant_com"
        android:textSize="18sp"
        android:fontFamily="@font/aclonica"/>


</LinearLayout>